# polyclaw

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  vercel.json
api/: index.py
polyclaw/: __init__.py  __main__.py  cli.py  config.py
polyclaw/analysis/: __init__.py  compare.py  copytrade.py  inefficiency.py  kelly.py  leaderboard.py  markets.py  wallets.py
polyclaw/api/: binance.py  kalshi.py  polygon.py  polymarket.py  subgraph.py
polyclaw/dashboard/: __init__.py  charts.py  report.py  terminal_ui.py
polyclaw/data/: __init__.py  models.py  store.py  supabase.py
polyclaw/simulator/: __init__.py  engine.py  portfolio.py  risk.py  strategies.py
scripts/: discover_apis.py  supabase_schema.sql
tests/: test_analysis.py  test_api.py  test_api_endpoints.py  test_kalshi.py  test_leaderboard.py  test_simulator.py
