[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "polyclaw"
version = "0.1.0"
description = "Polymarket Research & Paper Trading Platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "ZRosserMcIntosh"},
]

dependencies = [
    "httpx>=0.27",
    "websockets>=13.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "plotly>=5.20",
    "pandas>=2.2",
    "numpy>=1.26",
    "click>=8.1",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "pydantic>=2.6",
    "kaleido>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.3",
]
notebooks = [
    "jupyter>=1.0",
    "matplotlib>=3.8",
]

[project.scripts]
polyclaw = "polyclaw.cli:main"

[tool.setuptools.packages.find]
include = ["polyclaw*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
